--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,14 @@
                 <span class="icon-bar"></span>
             </button>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+                <li><a href="index.html">Main</a></li>
             </ul>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="contact.html">Contacts <span class="sr-only">(current)</span></a></li>
+                <li><a href="contact.html">Contacts</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
