--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,75 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-</head>
-<body>
-	<ul class="nav nav-tabs nav-justified">
-  	<li role="presentation" class="active"><a href="#">Main</a></li>
-  	<li role="presentation"><a href="#">Contacts</a></li>
-</ul>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+		<title>Course main page</title>
+	</head>
+	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PyBursa</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+		<div class="container theme-showcase" role="main">
+			<div class="jumbotron">
+	        <h1>Description</h1>
+	        <p>In this course we shifted the emphasis towards the practice.
+It will be a moderate amount of theory - maximum of practice.
+Approximate ratio of theory and practice: 30% to 70%
+Courses will take place from October 19 to December 28.
+Practical lessons in the classroom + online lectures.</p>
+	     </div>
+
+	     <div class="page-header">
+        <h1>Program</h1>
+      </div>
+			<div class="col-md-6">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Lesson</th>
+                <th>Content</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Python basics</td>
+                <td>Decorators, OOP, pipelines, multithreading, workers, iterative decorating workers</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Quantum physics</td>
+                <td>Corpuscular theory of light, subatomic particles, quantum equation derivatives</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Fortune, horoscopes and your life</td>
+                <td>Spiritual advices, numerology, feng shui, psychic insights</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+		</div>
+    
+
+	</body>
 </html>
