--- a/static/css/style.css
+++ b/static/css/style.css
@@ -593,3 +593,20 @@ a:hover {
         width: auto
     }
 }
+
+h3my {
+
+}
+
+qqqw {
+    font-family: fantasy;
+}
+
+h2.persn {
+    font-family: Cambria,Georgia,serif;
+    font-size: 23px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 23px;
+}
