--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,10 +6,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../static/images/favicon.ico">
+    
+    <link href='../static/fonts/lucida_console.ttf' rel='stylesheet' type='text/css'>
+    <link href='../static/fonts/monaco.ttf' rel='stylesheet' type='text/css'>
+    <link href='../static/fonts/lekton_regular.ttf' rel='stylesheet' type='text/css'>
 
     <title>Contact list</title>
 
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/starter-template.css" rel="stylesheet">
 
@@ -47,7 +51,7 @@
     <div class="director clearfix">
       
       <div class="title">
-        <span>Founder</span>
+        <h2 class="persn">Founder</h2>
         <h6><b>Name: </b>Andy Ehrman</h6>
         <h6><b>Skype: </b>andy_ehrman</h6>
         <h6><b>Email: </b>andy_ehrman@gmail.com</h6>
@@ -55,14 +59,14 @@
       </div>
       <div class="photo"><img src="../static/images/andy_ehrman.jpg" alt=""></div>
       <div class="info">
-        <p><dd>Taking on new material isn’t always easy. Through office hours and other channels, our TAs are here to provide you with answers, tips, and more</p>
+        <p>Taking on new material isn’t always easy. Through office hours and other channels, our TAs are here to provide you with answers, tips, and more</p>
       </div>
 
     </div>
         <div class="director clearfix">
       
       <div class="title">
-        <span>Director</span>
+        <h2 class="persn">Director</h2>
         <h6><b>Name: </b>Lizzy Rady</h6>
         <h6><b>Skype: </b>lizzy_rady</h6>
         <h6><b>Email: </b>lizzy_rady@gmail.com</h6>
@@ -70,12 +74,12 @@
       </div>
       <div class="photo"><img src="../static/images/lizzy_rady.jpg" alt=""></div>
       <div class="info">
-        <p><dd>Learn industry-grade frameworks, tools, vocabulary, and best practices from a teacher whose daily work involves using them expertly</p>
+        <p>Learn industry-grade frameworks, tools, vocabulary, and best practices from a teacher whose daily work involves using them expertly</p>
       </div>
     </div>
         <div class="director clearfix">
       <div class="title">
-        <span>Manager</span>
+        <h2 class="persn">Manager</h2>
         <h6><b>Name: </b>Katherine Rooks</h6>
         <h6><b>Skype: </b>katherine_rooks</h6>
         <h6><b>Email: </b>katherine_rooks@gmail.com</h6>
@@ -83,10 +87,10 @@
       </div>
       <div class="photo"><img src="../static/images/katherine_rooks.jpg" alt=""></div>
       <div class="info">
-        <p><dd>Our alumni love their Course Producers, who keep them motivated throughout the course. You can reach out to yours for support anytime.</p>
+        <p>Our alumni love their Course Producers, who keep them motivated throughout the course. You can reach out to yours for support anytime.</p>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
