--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
   		<div class="container">
 				<ul class="nav navbar-nav">
         <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
-        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="contact.html">Contacts</a></li>
       </ul>
   		</div>
 		</nav>
