--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ html {
 *,
 *:before,
 *:after {
-    box-sizing: inherit
+
 }
 
 img {
@@ -74,9 +74,7 @@ a:hover {
 :-ms-input-placeholder {
     color: #ffffff
 }
-.clearfix {
-    *zoom: 1
-}
+
 .clearfix:before,
 .clearfix:after {
     display: table;
@@ -380,9 +378,7 @@ a:hover {
     line-height: 20px;
     padding: 0 0 20px
 }
-.contact .contact_in {
-    padding: 40px auto 15px
-}
+
 .contact .col {
     float: left;
     padding: 30px 30px 0 0;
@@ -497,6 +493,15 @@ h3my {
 
 qqqw {
     font-family: fantasy;
+}
+
+h2.persn {
+    font-family: Cambria,Georgia,serif;
+    font-size: 23px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 23px;
 }
 
 h2.persn {
