--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h2 id="myHeader"><b>Description</b>:</h2>
+      <h2 class="persn"><b>Description</b></h2>
+        
         <p>Pybursa is a great place where you can learn basic Python and Django framework. Also you will be up to date with big number of useful tools/technologies such a pep8, CLI, git, csv, json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC, QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will defenetly enjoy it!</p>
         <p><a class="btn btn-primary btn-lg "  href="http://pybursa.com/"  role="button">More about PyBursa&raquo;</a></p>
       </div>
