--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,44 @@
-body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+body{
+  padding-top: 100px;
+  padding-bottom: 40px;
+}
+.red{
+	font-family: Florence, cursive;
+	color: red;
+}
+.t_name{
+	font-family: Arial;	
+	color: green;
+}
+.t_skype{
+	font-family: Blippo;
+	color: green;
+}
+.t_mail{
+	font-family: Arial, cursive;	
+	color: green;
+}
+.t_tel{
+	font-family: "Courier New", Courier, monospace;	
+	color: green;
+}
+.name{
+	font-family: Arial;	
+	color: blue;
+}
+.skype{
+	font-family: Blippo;
+	color: blue;
+}
+.mail{
+	font-family: Arial, cursive;	
+	color: blue;
+}
+.tel{
+	font-family: "Courier New", Courier, monospace;	
+	color: blue;
+}
+.Title{
+	font-family: "Courier New", Courier, monospace;	
+	color: blue;
 }
