--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,8 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="../static/css/starter-template.css" rel="stylesheet">
+		<link href="../static/css/style.css" rel="stylesheet">
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
 
   </head>
@@ -24,8 +24,8 @@
       <div class="container">
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a text="Main" href="index.html">Main</a></li>
+            <li><a text="Contacts" href="#">Contacts</a></li>
           </ul>
         </div>
       </div>
@@ -35,26 +35,28 @@
 
       <div class="starter-template">
 				<div class="col-lg-12">
+				<h1 class="Title">Our contacts:</h1>
 				<hr/>
-				<h2>Director</h2>
-				<p>Name:<span class="">Pavel</span></p>
-				<p>Skype:<span class="">Pavel</span></p>
-				<p>Email:<span class="">adres_1@gmail.com</span></p>
-				<p>Phone:<span class="">0123456780</span></p>
+				<hr/>
+				<h2 class="red">Director</h2>
+				<p class="t_name">Name:<span class="name">Pavel</span></p>
+				<p class="t_skype">Skype:<span class="skype">Pavel</span></p>
+				<p class="t_mail">Email:<span class="mail">adres_1@gmail.com</span></p>
+				<p class="t_tel">Phone:<span class="tel">0123456780</span></p>
 
 				<hr/>
-				<h2>Manager</h2>
-				<p>Name:<span class="">Daria</span></p>
-				<p>Skype:<span class="">Daria</span></p>
-				<p>Email:<span class="">adres_2@gmail.com</span></p>
-				<p>Phone:<span class="">0123456788</span></p>
+				<h2 class="red">Manager</h2>
+				<p class="t_name">Name:<span class="name">Daria</span></p>
+				<p class="t_skype">Skype:<span class="skype">Daria</span></p>
+				<p class="t_mail">Email:<span class="mail">adres_2@gmail.com</span></p>
+				<p class="t_tel">Phone:<span class="tel">0123456788</span></p>
 
 				<hr/>
-				<h2>Founder</h2>
-				<p>Name:<span class="">Noname</span></p>
-				<p>Skype:<span class="">Noname</span></p>
-				<p>Email:<span class="">adres_3@gmail.com</span></p>
-				<p>Phone:<span class="">0123456787</span></p>
+				<h2 class="red">Founder</h2>
+				<p class="t_name">Name:<span class="name">Noname</span></p>
+				<p class="t_skype">Skype:<span class="skype">Noname</span></p>
+				<p class="t_mail">Email:<span class="mail">adres_3@gmail.com</span></p>
+				<p class="t_tel">Phone:<span class="tel">0123456787</span></p>
 
 			</div>
       </div>
