--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
+		<link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/starter-template.css" rel="stylesheet">
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
 
@@ -24,8 +24,8 @@
       <div class="container">
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
+            <li><a text="Main" href="#">Main</a></li>
+            <li><a text= "Contacts" href="contact.html">Contacts</a></li>
           </ul>
         </div>
       </div>
