--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,54 +4,72 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
-    <!-- Bootstrap -->
+    <title>Pybursa contact</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="../static/css/style.css" rel="stylesheet">
   </head>
-  <nav class="navbar navbar-default">
-  
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html">Contacts</a></li>
-        
-    
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-</nav>
-<h1>Организаторы:</h1> 
-
-<h2>Дария Михалевич - Менеджер ItBursa</h2>
-daria.mykhalevych@gmail.com 
-skype: darka.darka.darka.darka. 
-+38 096 469 15 57 
-
-<h2>Павел Обод - Основатель ItBursa</h2>
-itbursa100@gmail.com 
-skype: azaless 
-
-
-<h2>Татьяна Орехова - Оплата курсов</h2>
-to096540848@gmail.com 
-skype: Tatyana_Oriekhova 
-+38 099 186 64 75 
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <body>
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a class="navbar-brand">
+        <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="contact.html">Contacts</a></li>
+        </ul>
+      </div>
+    </nav>
+    <h1>Организаторы:</h1>
+    <div class="column">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/darka.jpg" alt="center" width="50%" height="50%">
+          <div class="caption">
+            <div class="page-header">
+              <h2>Дария Михалевич    <small>Менеджер ItBursa</small>
+              </h2>
+            </div>
+          <p>daria.mykhalevych@gmail.com</p>
+          <p>skype: darka.darka.darka.darka.</p> 
+          <p>+38 096 469 15 57</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/pasha.jpg" alt="center" width="50%" height="50%">
+          <div class="caption">
+            <div class="page-header">
+              <h2>Павел Обод    <small>Основатель ItBursa</small>
+              </h2>
+            </div>
+            <p>itbursa100@gmail.com</p>
+            <p>skype: azaless</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="../static/images/alena.jpg" alt="center" width="50%" height="50%">
+          <div class="caption">
+            <div class="page-header">
+              <h2>Татьяна Орехова    <small>Оплата курсов</small>
+              </h2>
+            </div>
+            <p>to096540848@gmail.com</p>
+            <p>skype: Tatyana_Oriekhova</p> 
+            <p>+38 099 186 64 75</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
