--- a/templates/index.html
+++ b/templates/index.html
@@ -4,42 +4,90 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
-    <!-- Bootstrap -->
+    <title>Pybursa Main</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="../static/css/style.css" rel="stylesheet">
   </head>
-  <nav class="navbar navbar-default">
-  
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html">Contacts</a></li>
-        
-    
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-</nav>
-<div class="jumbotron">
-  <h1>Мощно быстро надежно</h1>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <body>
+      <nav class="navbar navbar-default">
+        <div class="navbar-header">
+            <a class="navbar-brand">
+            <img class="logo-minions" alt="Logo Pretty Minions" src="../static/images/logo.png" height="45px" style="margin-top: -10px"></a>
+          </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li><a href="contact.html">Contacts</a></li>      
+          </ul>
+        </div>
+      </nav>
+    <div class="container">
+      <h1>Description PyBursa</h1>
+    </div>
+    <div class="row">
+      <div class="container">
+        <p class="p2">Этот курс знакомит студентов с языком <span class="great">Python</span>. После завершения этого класса, студент сможет писать не тривиальные программы на <span class="great">Python</span>, касающиеся широкого спектра предметных областей. Темы включают языковые компоненты, <span class="great">среда разработки IDLE</span>, конструкции потока управления, строки ввода / вывода, коллекции, классы, модули и регулярные выражения.Курс дополнен многими лабораторными с использованием либо <span class="great">Linux или Windows</span>.</p>
+      </div>
+    </div>
+    <h1>Program</h1>
+    <table>
+      <tr>
+        <th>Занятие
+        </th>
+        <th>Тема
+        </th>
+        <th>Содержание
+        </th>
+      </tr>
+      <tr>
+        <td class="num">1
+        </td>
+        <td>Основы Python
+        </td>
+        <td>
+          <ul>
+            <li>zen, pep8, pylint, tools, IDE</li>
+            <li>консоль, типы данных, операторы</li>
+            <li>синтаксис управляющих конструкций (if, for...)</li>
+            <li>исключения и разбор стектрейса</li>
+            <li>кодировка в Python</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td class="num">2
+        </td>
+        <td>Строки и итераторы
+        </td>
+        <td>
+          <ul>
+            <li>работа со строками и итерируемыми типами</li>
+            <li>запуск скрипта и параметры</li>
+            <li>git http://try.github.com/levels/</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td class="num">3
+        </td>
+        <td>Функции и модульность
+        </td>
+        <td>
+          <ul>
+            <li>функции (def, lambda)</li>
+            <li>генераторы списков</li>
+            <li>модули, структура</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3" class="more">
+          <div class="alert alert-success" role="alert">Дальше больше!
+          </div>
+        </td>
+      </tr>
+    </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
-  </body>
+  </body>  
 </html>
