--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Main</a></li>
                     <li><a href="contact.html">Contacts</a></li>
-                    <li><a href="student_list.html">Students</a></li>
+                    <li><a href="students.html">Students</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h1>PyBursa</h1>
+            	<h1>Bursa</h1>
                 <h2>Description</h2>
                 <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
                 <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
