--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-4">
                     <img class="img-circle" src="../static/images/betman.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3 id="soho"><strong>Director</strong></h3>
+                        <h3><strong>Director</strong></h3>
                         <address>
         Name: Batman<br>
         Skype: batmobile<br>
@@ -44,7 +44,7 @@
                 <div class="col-lg-4">
                     <img class="img-circle" src="../static/images/cat.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3 id="soho"><strong>Manager</strong></h3>
+                        <h3><strong>Manager</strong></h3>
                         <address>
         Name: Cat<br>
         Skype: catmobile<br>
@@ -56,7 +56,7 @@
                 <div class="col-lg-4">
                     <img class="img-circle" src="../static/images/robin.jpg" alt="Generic placeholder image">
                     <div class="caption">
-                        <h3 id="soho"><strong>Founder </strong></h3>
+                        <h3><strong>Founder </strong></h3>
                         <address>
         Name: Robin<br>
         Skype: robmobile<br>
