--- a/templates/contact.html
+++ b/templates/contact.html
@@ -58,7 +58,7 @@
           </p></th>
           
           <th>
-          <h2> Manager</h2>
+          <h2> Founder</h2>
           <p><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
           Name: Tonny Stark </br>
             Skype: ironman14 </br>
