--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa - Main</title>
+    <title>Main</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -36,7 +36,7 @@
     </nav>    
      <div class= "container">    
       <div class="jumbotron">
-        <h1>PyBursa</h1>
+        <h1>Description</h1>
         <p>Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
         <h2>Programm</h2>
         <ol>
