--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
           </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>      
           </ul>
         </div>
